oscar's assignment commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="header">
       <h1>
         Group 1 Team 2 Assignment <br />
-        <span class="header-span">Mykel, Oscar, Chinyere, Miracle, Ogechi, Victoria, Eruoghene,
+        <span class="header-span"
+          >Mykel, Oscar, Chinyere, Miracle, Ogechi, Victoria, Eruoghene,
           Daniel</span
         >
       </h1>
@@ -30,10 +31,35 @@
         </ul>
         <div class="social">
           <h4>Connect on socials</h4>
-          <a href="https://www.linkedin.com/in/chigozie-mbama/"><img src="./img/iconizer-linkedin.svg" alt="" /></a>
+          <a href="https://www.linkedin.com/in/chigozie-mbama/"
+            ><img src="./img/iconizer-linkedin.svg" alt=""
+          /></a>
           <img src="./img/iconizer-whatsapp.svg" alt="" />
           <img src="./img/iconizer-twitter.svg" alt="" />
           <img src="./img/iconizer-youtube.svg" alt="" />
+        </div>
+      </div>
+      <!-- Oscar's section - Don't Touch!!! -->
+      <div class="oscar-container">
+        <h2>Oscar's Schedule</h2>
+        <ol>
+          <li><b> Monday</b> 9am - 5pm: Work</li>
+          <li><b> Teusday</b> 5pm - 7pm: Stutern Class</li>
+          <li><b> Wednesday</b> 7pm - 9pm: Gym</li>
+          <li><b> Thursday </b> 9pm - 10pm: Watch Series</li>
+          <li><b> Friday </b> 10pm - 8am: Sleep</li>
+          <li><b> Saturday</b> 11am - 6pm: Watch EPL</li>
+          <li><b> Sunday:</b> Church and Chillz</li>
+        </ol>
+        <div class="social-oscar">
+          <h4>I'm Social</h4>
+          <a href="https://www.linkedin.com/in/obijekwuoscar/"
+            ><img src="./img/iconizer-linkedin.svg" alt=""
+          /></a>
+          <a
+            href="https://twitter.com/Oscardelahoya90?t=yGpCcFb7UTehMWEgQwYPZA&s=09"
+            ><img src="./img/iconizer-twitter.svg" alt=""
+          /></a>
         </div>
       </div>
     </div>
