Added Daniel's TODO Activities

--- a/index.html
+++ b/index.html
@@ -62,6 +62,31 @@
           /></a>
         </div>
       </div>
+      <!-- Daniel's section - Don't Touch!!! -->
+      <div class="daniel-container">
+        <h2>Daniel's Weekly ToDo</h2>
+        <ul>
+          <li>Monday  5pm: Stutern session</li>
+          <li>Tuesday  4pm: Work</li>
+          <li>Wednesday  6pm: Relax</li>
+          <li>Thursday  4pm: Work</li>
+          <li>Friday  9pm: Work Again</li>
+          <li>Saturday  8am: Relax</li>
+          <li>Sunday all day: For God</li>
+        </ul>
+        <div class="social-daniel">
+          <h4>Follow Share and Subscribe 😍 </h4>
+          <a href="https://www.linkedin.com/in/adejoorindaniel"
+            ><img src="./img/iconizer-linkedin.svg" alt=""
+          /></a>
+          <img src="./img/iconizer-whatsapp.svg" alt="" />
+          <a
+            href="https://twitter.com/dhannielmajor?t=AXhDBx8qiPHJLfNDQAGTmQ&s=09"
+            ><img src="./img/iconizer-twitter.svg" alt=""
+          /></a>
+          <img src="./img/iconizer-youtube.svg" alt="" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
