--- a/index.html
+++ b/index.html
@@ -87,6 +87,28 @@
           <img src="./img/iconizer-youtube.svg" alt="" />
         </div>
       </div>
+      <div class="eru-container">
+        <h2>Eruoghene's Schedule</h2>
+        <ul class="eru-section">
+          <li><b> Monday</b> 10am - 2pm: WT Fellowship</li>
+          <li><b> Tuesday</b> 7pm - 9pm: Volunteer</li>
+          <li><b> Wednesday</b> 5pm - 7pm: Stutern </li>
+          <li><b> Thursday </b> 3pm - 5pm: HackerRank</li>
+          <li><b> Friday </b> 1pm - 4pm: Coursera</li>
+          <li><b> Saturday</b> Cook and Clean</li>
+          <li><b> Sunday:</b> Rest</li>
+        </ul>
+        <div class="socials">
+          <h4>Connect with me</h4>
+          <a href="https://www.linkedin.com/in/eruoghene-eru-i-a1017723b/"
+            ><img src="./img/iconizer-linkedin.svg" alt=""
+          /></a>
+          <a
+            href="https://twitter.com/eru_js"
+            ><img src="./img/iconizer-twitter.svg" alt=""
+          /></a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
