stutern group task

--- a/index.html
+++ b/index.html
@@ -121,6 +121,27 @@
         </a>
       </div>
     </div>
+    <!--Victoria Agbo's Contribution -->
+    <div class="victoria-container">
+      <h2>Victoria's Weekly ToDo</h2>
+      <ul>
+        <li>Monday 9am-6pm: Work/Stutern Session</li>
+        <li>Tuesday 9am-6pm: Work/Stutern Session</li>
+        <li>Wednesday 7pm: Read</li>
+        <li>Thursday 9am-6pm: Work/Stutern Session</li>
+        <li>Friday 9am: More Work</li>
+        <li>Saturday: Lots of Sleep/Chill</li>
+        <li>Sunday: Church/Chill</li>
+      </ul>
+      <div class="social-victoria">
+        <h4> Lets Connect</h4>
+        <a href=""><img src="./img/iconizer-linkedin.svg" alt="" /></a>
+        <img src="./img/iconizer-whatsapp.svg" alt="" />
+        <a href=""><img src="./img/iconizer-twitter.svg"
+            alt="" /></a>
+        <img src="./img/iconizer-youtube.svg" alt="" />
+      </div>
+    </div>
   </div>
 </body>
 </html>
