--- a/index.html
+++ b/index.html
@@ -1,147 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Group 1 Team 2 Sticky Board</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Group 1 Team 2 Sticky Board</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body>
-  <div class="header">
-    <h1>
-      Group 1 Team 2 Assignment <br />
-      <span class="header-span">Mykel, Oscar, Chinyere, Miracle, Ogechi, Victoria, Eruoghene,
-        Daniel</span>
-    </h1>
-  </div>
-  <div class="general">
-    <div class="mykel-container">
-      <h2>Mykel's Weekly Activities</h2>
-      <ul>
-        <li>Monday-5pm: Stutern session</li>
-        <li>Teusday-4pm: Gym</li>
-        <li>Wednesday-6pm: Chruch</li>
-        <li>Thursday-4pm: Gym</li>
-        <li>Friday-9pm: Party</li>
-        <li>Saturday-8am: Cleanup</li>
-        <li>Sunday: Rest day</li>
-      </ul>
-      <div class="social">
-        <h4>Connect on socials</h4>
-        <a href="https://www.linkedin.com/in/chigozie-mbama/"><img src="./img/iconizer-linkedin.svg" alt="" /></a>
-        <img src="./img/iconizer-whatsapp.svg" alt="" />
-        <img src="./img/iconizer-twitter.svg" alt="" />
-        <img src="./img/iconizer-youtube.svg" alt="" />
+  <body>
+    <div class="header">
+      <h1>
+        Group 1 Team 2 Assignment <br />
+        <span class="header-span"
+          >Mykel, Oscar, Daniel, Ogechi, Eruoghene, Victoria, Chinyere, Miracle,
+          Daniel</span
+        >
+      </h1>
+    </div>
+    <div class="general">
+      <div class="mykel-container">
+        <h2>Mykel's Weekly Activities</h2>
+        <ul>
+          <li>Monday-5pm: Stutern session</li>
+          <li>Teusday-4pm: Gym</li>
+          <li>Wednesday-6pm: Chruch</li>
+          <li>Thursday-4pm: Gym</li>
+          <li>Friday-9pm: Party</li>
+          <li>Saturday-8am: Cleanup</li>
+          <li>Sunday: Rest day</li>
+        </ul>
+        <div class="social">
+          <h4>Connect on socials</h4>
+          <a href="https://www.linkedin.com/in/chigozie-mbama/"
+            ><img src="./img/iconizer-linkedin.svg" alt=""
+          /></a>
+          <img src="./img/iconizer-whatsapp.svg" alt="" />
+          <img src="./img/iconizer-twitter.svg" alt="" />
+          <img src="./img/iconizer-youtube.svg" alt="" />
+        </div>
+      </div>
+      <!-- Oscar's section - Don't Touch!!! -->
+      <div class="oscar-container">
+        <h2>Oscar's Schedule</h2>
+        <ol>
+          <li><b> Monday</b> 9am - 5pm: Work</li>
+          <li><b> Teusday</b> 5pm - 7pm: Stutern Class</li>
+          <li><b> Wednesday</b> 7pm - 9pm: Gym</li>
+          <li><b> Thursday </b> 9pm - 10pm: Watch Series</li>
+          <li><b> Friday </b> 10pm - 8am: Sleep</li>
+          <li><b> Saturday</b> 11am - 6pm: Watch EPL</li>
+          <li><b> Sunday:</b> Church and Chillz</li>
+        </ol>
+        <div class="social-oscar">
+          <h4>I'm Social</h4>
+          <a href="https://www.linkedin.com/in/obijekwuoscar/"
+            ><img src="./img/iconizer-linkedin.svg" alt=""
+          /></a>
+          <a
+            href="https://twitter.com/Oscardelahoya90?t=yGpCcFb7UTehMWEgQwYPZA&s=09"
+            ><img src="./img/iconizer-twitter.svg" alt=""
+          /></a>
+        </div>
+      </div>
+      <!-- Daniel's section - Don't Touch!!! -->
+      <div class="daniel-container">
+        <h2>Daniel's Weekly ToDo</h2>
+        <ul>
+          <li>Monday 5pm: Stutern session</li>
+          <li>Tuesday 4pm: Work</li>
+          <li>Wednesday 6pm: Relax</li>
+          <li>Thursday 4pm: Work</li>
+          <li>Friday 9pm: Work Again</li>
+          <li>Saturday 8am: Relax</li>
+          <li>Sunday all day: For God</li>
+        </ul>
+        <div class="social-daniel">
+          <h4>Follow Share and Subscribe 😍</h4>
+          <a href="https://www.linkedin.com/in/adejoorindaniel"
+            ><img src="./img/iconizer-linkedin.svg" alt=""
+          /></a>
+          <img src="./img/iconizer-whatsapp.svg" alt="" />
+          <a
+            href="https://twitter.com/dhannielmajor?t=AXhDBx8qiPHJLfNDQAGTmQ&s=09"
+            ><img src="./img/iconizer-twitter.svg" alt=""
+          /></a>
+          <img src="./img/iconizer-youtube.svg" alt="" />
+        </div>
+      </div>
+      <div class="eru-container">
+        <h2>Eruoghene's Schedule</h2>
+        <ul class="eru-section">
+          <li><b> Monday</b> 10am - 2pm: WT Fellowship</li>
+          <li><b> Tuesday</b> 7pm - 9pm: Volunteer</li>
+          <li><b> Wednesday</b> 5pm - 7pm: Stutern</li>
+          <li><b> Thursday </b> 3pm - 5pm: HackerRank</li>
+          <li><b> Friday </b> 1pm - 4pm: Coursera</li>
+          <li><b> Saturday</b> Cook and Clean</li>
+          <li><b> Sunday:</b> Rest</li>
+        </ul>
+        <div class="socials">
+          <h4>Connect with me</h4>
+          <a href="https://www.linkedin.com/in/eruoghene-eru-i-a1017723b/"
+            ><img src="./img/iconizer-linkedin.svg" alt=""
+          /></a>
+          <a href="https://twitter.com/eru_js"
+            ><img src="./img/iconizer-twitter.svg" alt=""
+          /></a>
+        </div>
+      </div>
+      <!-- Ogechi juliet uhegbu's section  -->
+      <div class="ogechi_container">
+        <h2>OGECHI'S DAILY SCHEDULE</h2>
+        <ul>
+          <li>2:00pm - 4:00pm: Indept. Study</li>
+          <li>4:00pm - 5:00pm: Indept. Pract.</li>
+          <li>5:00pm - 7:00pm: Live Session</li>
+          <li>7:00pm - 7:30pm: Break</li>
+          <li>7:30pm - 8:30pm: Recap</li>
+        </ul>
+        <div class="social_ogechi">
+          <h4>Connect @</h4>
+          <a href="https://www.linkedin.com/in/ogechi-juliet-uhegbu">
+            <img src="./img/iconizer-linkedin.svg" alt="linkedin" />
+          </a>
+          <a href="https://www.whatsapp.com/diamond">
+            <img src="./img/iconizer-whatsapp.svg" alt="whatsapp" />
+          </a>
+          <a href="https://twitter.com/diamondjuliet3">
+            <img src="./img/iconizer-twitter.svg" alt="twitter" />
+          </a>
+          <a href="https://youtube.com/ogechi-juliet-uhegbu">
+            <img src="./img/iconizer-youtube.svg" alt="youtube" />
+          </a>
+        </div>
+      </div>
+      <!--Victoria Agbo's Contribution -->
+      <div class="victoria-container">
+        <h2>Victoria's Weekly ToDo</h2>
+        <ul>
+          <li>Monday 9am-6pm: Work/Stutern Session</li>
+          <li>Tuesday 9am-6pm: Work/Stutern Session</li>
+          <li>Wednesday 7pm: Read</li>
+          <li>Thursday 9am-6pm: Work/Stutern Session</li>
+          <li>Friday 9am: More Work</li>
+          <li>Saturday: Lots of Sleep/Chill</li>
+          <li>Sunday: Church/Chill</li>
+        </ul>
+        <div class="social-victoria">
+          <h4>Lets Connect</h4>
+          <a href=""><img src="./img/iconizer-linkedin.svg" alt="" /></a>
+          <img src="./img/iconizer-whatsapp.svg" alt="" />
+          <a href=""><img src="./img/iconizer-twitter.svg" alt="" /></a>
+          <img src="./img/iconizer-youtube.svg" alt="" />
+        </div>
       </div>
     </div>
-    <!-- Oscar's section - Don't Touch!!! -->
-    <div class="oscar-container">
-      <h2>Oscar's Schedule</h2>
-      <ol>
-        <li><b> Monday</b> 9am - 5pm: Work</li>
-        <li><b> Teusday</b> 5pm - 7pm: Stutern Class</li>
-        <li><b> Wednesday</b> 7pm - 9pm: Gym</li>
-        <li><b> Thursday </b> 9pm - 10pm: Watch Series</li>
-        <li><b> Friday </b> 10pm - 8am: Sleep</li>
-        <li><b> Saturday</b> 11am - 6pm: Watch EPL</li>
-        <li><b> Sunday:</b> Church and Chillz</li>
-      </ol>
-      <div class="social-oscar">
-        <h4>I'm Social</h4>
-        <a href="https://www.linkedin.com/in/obijekwuoscar/"><img src="./img/iconizer-linkedin.svg" alt="" /></a>
-        <a href="https://twitter.com/Oscardelahoya90?t=yGpCcFb7UTehMWEgQwYPZA&s=09"><img
-            src="./img/iconizer-twitter.svg" alt="" /></a>
-      </div>
-    </div>
-    <!-- Daniel's section - Don't Touch!!! -->
-    <div class="daniel-container">
-      <h2>Daniel's Weekly ToDo</h2>
-      <ul>
-        <li>Monday 5pm: Stutern session</li>
-        <li>Tuesday 4pm: Work</li>
-        <li>Wednesday 6pm: Relax</li>
-        <li>Thursday 4pm: Work</li>
-        <li>Friday 9pm: Work Again</li>
-        <li>Saturday 8am: Relax</li>
-        <li>Sunday all day: For God</li>
-      </ul>
-      <div class="social-daniel">
-        <h4>Follow Share and Subscribe 😍 </h4>
-        <a href="https://www.linkedin.com/in/adejoorindaniel"><img src="./img/iconizer-linkedin.svg" alt="" /></a>
-        <img src="./img/iconizer-whatsapp.svg" alt="" />
-        <a href="https://twitter.com/dhannielmajor?t=AXhDBx8qiPHJLfNDQAGTmQ&s=09"><img src="./img/iconizer-twitter.svg"
-            alt="" /></a>
-        <img src="./img/iconizer-youtube.svg" alt="" />
-      </div>
-    </div>
-    <div class="eru-container">
-      <h2>Eruoghene's Schedule</h2>
-      <ul class="eru-section">
-        <li><b> Monday</b> 10am - 2pm: WT Fellowship</li>
-        <li><b> Tuesday</b> 7pm - 9pm: Volunteer</li>
-        <li><b> Wednesday</b> 5pm - 7pm: Stutern </li>
-        <li><b> Thursday </b> 3pm - 5pm: HackerRank</li>
-        <li><b> Friday </b> 1pm - 4pm: Coursera</li>
-        <li><b> Saturday</b> Cook and Clean</li>
-        <li><b> Sunday:</b> Rest</li>
-      </ul>
-      <div class="socials">
-        <h4>Connect with me</h4>
-        <a href="https://www.linkedin.com/in/eruoghene-eru-i-a1017723b/"><img src="./img/iconizer-linkedin.svg"
-            alt="" /></a>
-        <a href="https://twitter.com/eru_js"><img src="./img/iconizer-twitter.svg" alt="" /></a>
-      </div>
-    </div>
-    <!-- Ogechi juliet uhegbu's section  -->
-    <div class="ogechi_container">
-      <h2>OGECHI'S DAILY SCHEDULE</h2>
-      <ul>
-        <li>2:00pm - 4:00pm: Indept. Study</li>
-        <li>4:00pm - 5:00pm: Indept. Pract.</li>
-        <li>5:00pm - 7:00pm: Live Session</li>
-        <li>7:00pm - 7:30pm: Break</li>
-        <li>7:30pm - 8:30pm: Recap</li>
-      </ul>
-      <div class="social_ogechi">
-        <h4>Connect @ </h4>
-        <a href="https://www.linkedin.com/in/ogechi-juliet-uhegbu">
-          <img src="./img/iconizer-linkedin.svg" alt="linkedin" />
-        </a>
-        <a href="https://www.whatsapp.com/diamond">
-          <img src="./img/iconizer-whatsapp.svg" alt="whatsapp" />
-        </a>
-        <a href="https://twitter.com/diamondjuliet3">
-          <img src="./img/iconizer-twitter.svg" alt="twitter" />
-        </a>
-        <a href="https://youtube.com/ogechi-juliet-uhegbu">
-          <img src="./img/iconizer-youtube.svg" alt="youtube" />
-        </a>
-      </div>
-    </div>
-    <!--Victoria Agbo's Contribution -->
-    <div class="victoria-container">
-      <h2>Victoria's Weekly ToDo</h2>
-      <ul>
-        <li>Monday 9am-6pm: Work/Stutern Session</li>
-        <li>Tuesday 9am-6pm: Work/Stutern Session</li>
-        <li>Wednesday 7pm: Read</li>
-        <li>Thursday 9am-6pm: Work/Stutern Session</li>
-        <li>Friday 9am: More Work</li>
-        <li>Saturday: Lots of Sleep/Chill</li>
-        <li>Sunday: Church/Chill</li>
-      </ul>
-      <div class="social-victoria">
-        <h4> Lets Connect</h4>
-        <a href=""><img src="./img/iconizer-linkedin.svg" alt="" /></a>
-        <img src="./img/iconizer-whatsapp.svg" alt="" />
-        <a href=""><img src="./img/iconizer-twitter.svg"
-            alt="" /></a>
-        <img src="./img/iconizer-youtube.svg" alt="" />
-      </div>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
