--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>
         Group 1 Team 2 Assignment <br />
         <span class="header-span"
-          >Mykel, Oscar, Daniel, Ogechi, Eruoghene, Victoria, Chinyere, Miracle,
+          >Mykel, Oscar, Daniel, Eruoghene, Ogechi, Victoria, Chinyere, Miracle,
           Daniel</span
         >
       </h1>
